# pico-rf24

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: play_sound.py  sniff_usb.py
src/: button.c  button.h  echo.c  hello_world_microphone.c  irq_handler.c  irq_handler.h  led.c  led.h  main.cpp  microphone.c  microphone.h  push_and_send.c  radio.cpp  radio.h  sine_wave.c  test_button.c  test_pwm_speaker.cpp  test_usb.cpp
